# AI-trade-analyst

./: .dockerignore  .gitignore  ACCEPTANCE_TESTS.md  ACCEPTANCE_TESTS_1B.md  ACCEPTANCE_TESTS_1C.md  ACCEPTANCE_TESTS_1D.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  AUDIT_REPORT_V1.1.md  CLAUDE.md  CODEX_ROSTER_REFACTOR_PLAN.md  CONSTRAINTS.md  CONTRACTS.md  Chart Analysis Build plan Claude.txt  Chart Analysis.txt  Dockerfile  Install_Dependencies_StartProxy.bat  LICENSE  Makefile  NOTES_FOR_V2.md  OBJECTIVE.md  README.md  REPORT_TEMPLATE.md  ROADMAP.md  RUN.bat  SECURITY.md  UI_STYLE_GUIDE.md  V3 - G2.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run_ai_trade_analyst_python.bat  run_analyst.py  run_explain.py  run_mro_live_check_with_logs_v3.bat  run_multi_analyst.py  setup.md  setup_fastapi.bat  (+1 more)
ai_analyst/: .env.example  __init__.py  cli.py  pytest.ini  requirements.txt
analyst/: __init__.py  analyst.py  arbiter.py  contracts.py  enums.py  explain_contracts.py  explain_service.py  explainability.py  multi_analyst_service.py  multi_contracts.py  personas.py  pre_filter.py  prompt_builder.py  service.py  templates.py
app/: AI-Trade-Analyst-V3-G1.html  AI_Trade_Analyst_Intake_Form_V2.html  OPENAITRADE.bat  index.html  journey.html  journey.js
autotune/: AUTOTUNE_V1_CLAUDE_CODE_PROMPT_v2.1.md  AUTOTUNE_V1_DESIGN.md  comparison.py  data_loader.py  eval_config.json  evaluator.py  experiment_log_schema.json  instance_manifest.json  program.md  run.py
caddy/: Caddyfile
config/: llm_routing.example.yaml
docs/: ACCEPTANCE_TESTS.md  AIT_V2_FINAL_DESIGN.md  AI_ORIENTATION.md  AI_TradeAnalyst_Progress.md  ALIGNMENT_FIELD_CLASSIFICATION.md  ANALYSIS_ENGINE_SPEC_v1.2.md  AUDIT_STATUS_2026-02-26.md  CI_Seam_Hardening_Spec.md  CLAUDE_CODE_PROMPT_AUDIT_V1.1.md  CLAUDE_CODE_PROMPT_V1.1.md  HARNESS_ENGINEERING_ADR.md  LLM_Routing_Centralisation_Spec.md  MDO_Operationalise_Phase2_Spec.md  MDO_Operationalise_Spec.md  MDO_Phase1A_Spec.md  MDO_Phase1B_Spec.md  MDO_PhaseE_Spec.md  MDO_PhaseF_InstrumentPromotion_Spec.md  MDO_ProviderRouting_Spec.md  MDO_ProviderSwitchover_Spec.md  MDO_Runtime_Guide.md  MRO_PHASE4_PROGRESS_2026-03-02.md  MRO_RUNBOOK.md  NOTES_FOR_V2.md  PHASE_8_PLAN.md  PHASE_8_Roadmap_Spec.md  PR1_Market_Hours_Awareness_TaskCard.md  PR2_Alerting_Hooks_TaskCard.md  PR3_Runtime_Posture_TaskCard.md  PR_OPS_4_SPEC_FINAL.md  PR_OPS_4a_APPROVAL_PROMPT.md  PR_OPS_4b_APPROVAL_PROMPT.md  PR_OPS_5_SPEC.md  README.md  README_specs.md  REPAIR_DIAGNOSTIC_AND_PATCH_PLAN.md  SESSION_BRIEFING_ENGINE_DESIGN.md  SESSION_HANDOFF.md  Security_API_Hardening_Spec.md  Technical_Debt_Register.md  (+22 more)
examples/: sample_aar.json  sample_export_report.html  sample_export_ticket.md  (+1 more)
(+714 files in other folders)
